force-app/main/default/objects/HistoriqueAttributionRessource__c/HistoriqueAttributionRessource__c.object-meta.xml
<CustomObject>
    <description>Historique des ressources attribuées</description>
    <label>Historique d&apos;attribution d&apos;une ressource</label>
    <nameField>
        <displayFormat>HRA-{0000000000}</displayFormat>
        <label>Nom de Ligne historique des ressources attribuées</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historique des ressources attribuées</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>