force-app/main/default/objects/HistoriqueAttributionRessource__c/fields/FSL_Rendez_vous_parent__c.field-meta.xml
<CustomField>
    <fullName>FSL_Rendez_vous_parent__c</fullName>
    <label>Rendez-vous de service</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Historique des ressources attribuées</relationshipLabel>
    <relationshipName>Historique_des_ressources_attribu_es</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>