force-app/main/default/objects/HistoriqueAttributionRessource__c/fields/FSL_Ressource_de_service__c.field-meta.xml
<CustomField>
    <fullName>FSL_Ressource_de_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource de service</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Historique des ressources attribuées</relationshipLabel>
    <relationshipName>Historique_des_ressources_attibu_es</relationshipName>
    <type>Lookup</type>
</CustomField>