force-app/main/default/objects/HistoriqueAttributionRessource__c/fields/Temps_de_trajet_estime__c.field-meta.xml
<CustomField>
    <fullName>Temps_de_trajet_estime__c</fullName>
    <label>Temps de trajet estimé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>