force-app/main/default/objects/HistoriqueAttributionRessource__c/fields/Type_de_ressource__c.field-meta.xml
<CustomField>
    <fullName>Type_de_ressource__c</fullName>
    <label>Type de ressource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>